login page added & navigation bug fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,27 @@
+<app-nav-bar></app-nav-bar>
 <!-- Carousal -->
 <section class="m-6">
     <div id="default-carousel" class="relative w-full" data-carousel="slide">
         <!-- Carousel wrapper -->
         <div class="relative h-96 overflow-hidden rounded-lg md:h-96">
              <!-- Item 1 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+            <div class="duration-700 ease-in-out" data-carousel-item>
                 <img src="../../assets/images/c1.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 2 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+            <div class="duration-700 ease-in-out" data-carousel-item>
                 <img src="../../assets/images/c2.webp" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 3 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+            <div class="duration-700 ease-in-out" data-carousel-item>
                 <img src="../../assets/images/c3.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 4 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+            <div class="duration-700 ease-in-out" data-carousel-item>
                 <img src="../../assets/images/c4.webp" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 5 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+            <div class="duration-700 ease-in-out" data-carousel-item>
                 <img src="../../assets/images/c5.jpg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
         </div>
@@ -58,6 +59,6 @@
     <app-cards></app-cards>
     <app-cards></app-cards>
 </div>
-
+<app-footer></app-footer>
 <!-- Cards -->
 
