--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,2 +1,161 @@
-<button (click)="login()">move home</button>
+<div class="m-5">
+    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+      </a>
+</div>
+<div class="w-full flex items-center justify-center">
+    <div class="w-full m-5 sm:w-10/12 md:w-8/12 lg:w-6/12 xl:w-5/12 bg-white rounded-lg shadow-lg">
+        <form class="m-5" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+            <div class="my-5 mb-8 text-center">
+                <h5 class="font-sans font-bold text-2xl">User SignUp</h5>
+            </div>
+            <div class="grid gap-6 mb-6 md:grid-cols-2">
+                <div>
+                    <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First name</label>
+                    <input type="text" id="first_name"
+                        formControlName="signUpFirstname"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        [ngClass]="{ 'border-red-600': signUpFormSibmitted && signupFormValidate['signUpFirstname'].errors}"
+                        placeholder="John" required />
+                    @if(signUpFormSibmitted && signupFormValidate['signUpFirstname'].errors){
+                        @if (signupFormValidate['signUpFirstname'].errors['required']) {
+                            <small class="ml-3 text-red-600">User First Name Is Required </small>
+                            }
+                    }
+                        
+                </div>
+                <div>
+                    <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last name</label>
+                    <input type="text" id="last_name"
+                        formControlName="signUpLastname"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        [ngClass]="{ 'border-red-600': signUpFormSibmitted && signupFormValidate['signUpLastname'].errors}"
+                        placeholder="Doe" required />
+                        @if(signUpFormSibmitted && signupFormValidate['signUpLastname'].errors){
+                            @if (signupFormValidate['signUpLastname'].errors['required']) {
+                                <small class="ml-3 text-red-600">User Last Name Is Required </small>
+                                }
+                        }
+                </div>
+                <div>
+                    <label for="company" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Gender</label>
+                    <select
+                        formControlName="signUpGender"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        [ngClass]="{'border-red-600': signUpFormSibmitted && signupFormValidate['signUpGender'].errors}"
+                        >
+                        <option value="" selected>Select Gender</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+                    @if(signUpFormSibmitted && signupFormValidate['signUpGender'].errors){
+                        @if (signupFormValidate['signUpGender'].errors['required']) {
+                            <small class="ml-3 text-red-600">User Gender Is Required </small>
+                            }
+                    }
+                </div>
+                <div>
+                    <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone number</label>
+                    <input type="tel" id="phone"
+                        formControlName="signUpPhoneNumber"
+                        [ngClass]="{'border-red-600': signUpFormSibmitted && signupFormValidate['signUpPhoneNumber'].errors}"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="07#-#######" pattern="07[2467][0-9]{7}" required />
+                        @if(signUpFormSibmitted && signupFormValidate['signUpPhoneNumber'].errors){
+                            @if (signupFormValidate['signUpPhoneNumber'].errors['required']) {
+                                <small class="ml-3 text-red-600">User Phone Number Is Required </small>
+                                }
+                            @if (signupFormValidate['signUpPhoneNumber'].errors['pattern']) {
+                                <small class="ml-3 text-red-600">Invalid Phone Number </small>
+                                }
+                        }
+                        
+                </div>
+
+            </div>
+            <div class="mb-6">
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email address</label>
+                <input type="email" id="email"
+                    formControlName="signUpEmailAddress"
+                    [ngClass]="{'border-red-600': signUpFormSibmitted && signupFormValidate['signUpEmailAddress'].errors}"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="john.doe@company.com" required />
+                    @if(signUpFormSibmitted && signupFormValidate['signUpEmailAddress'].errors){
+                        @if (signupFormValidate['signUpEmailAddress'].errors['required']) {
+                            <small class="ml-3 text-red-600">User Email Address Is Required </small>
+                            }
+                        @if (signupFormValidate['signUpEmailAddress'].errors['email']) {
+                            <small class="ml-3 text-red-600">Invalid Email Address </small>
+                            }
+                    }
+            </div>
+            <div class="mb-6">
+                <label for="password"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                <input type="password" id="password"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="•••••••••" required />
+            </div>
+            <div class="mb-6">
+                <label for="confirm_password"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
+                <input type="password" id="confirm_password"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="•••••••••" required />
+            </div>
+            <div class="flex items-start mb-6">
+                <div class="flex items-center h-5">
+                    <input id="remember" type="checkbox" value=""
+                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"
+                        required />
+                </div>
+                <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the
+                    <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and
+                        conditions</a>.</label>
+            </div>
+            <button type="submit"
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Submit
+            </button>
+        </form>
+
+        <form class="m-5 hidden">
+            <div class="my-5 mb-8 text-center">
+                <h5 class="font-sans font-bold text-2xl">User SignIn</h5>
+            </div>
+            
+            <div class="mb-6">
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email address</label>
+                <input type="email"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="john.doe@company.com" required />
+            </div>
+            <div class="mb-6">
+                <label for="password"
+                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                <input type="password"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                    placeholder="•••••••••" required />
+            </div>
+            
+            <div class="flex items-start mb-6">
+                <div class="flex items-center h-5">
+                    <input type="checkbox" value=""
+                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"
+                        required />
+                </div>
+                <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the
+                    <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and
+                        conditions</a>.</label>
+            </div>
+            <button type="submit" (click)="login()"
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Submit
+            </button>
+        </form>
+
+    </div>
+</div>
+
 <app-footer></app-footer>
