film watch page created

--- a/src/app/component/cards/cards.component.html
+++ b/src/app/component/cards/cards.component.html
@@ -1,5 +1,5 @@
 <div class="w-fit bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-    <a href="#" class="">
+    <a href="watch-film" class="">
         <img class="rounded h-52 hover:scale-105 duration-100" src="https://images.justwatch.com/poster/305436330/s166/fast-x.webp" />
     </a>
 </div>
