home page updated

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,133 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="w-full h-screen flex justify-center items-center">
-    <div class="w-full absolute flex flex-col text-white justify-center items-center p-6">
-        <div class="mt-44">
-            <div class="w-full text-center">
-                <h1 class="text-3xl lg:text-7xl font-bold">Your streaming guide for <br> movies, TV shows & sports</h1>
-                <p class="text-gray-400 lg:text-2xl mt-10">Find where to stream new, popular & upcoming entertainment with JustWatch.</p>
-                <button type="button" class="focus:outline-none mt-40 text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Discover Movies</button>
+  <div
+    class="w-full absolute flex flex-col text-white justify-center items-center p-6"
+  >
+    <div class="mt-44">
+      <div class="w-full text-center">
+        <h1 class="text-3xl lg:text-7xl font-bold">
+          Your streaming guide for <br />
+          movies, TV shows & sports
+        </h1>
+        <p class="text-gray-400 lg:text-2xl mt-10">
+          Find where to stream new, popular & upcoming entertainment with
+          JustWatch.
+        </p>
+        <button
+          type="button"
+          class="focus:outline-none mt-32 text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
+        >
+          Discover Movies
+        </button>
+      </div>
+    </div>
+  </div>
+  <img
+    class="w-full h-screen bg-cover object-cover"
+    src="../../assets/images/global-home-bg-comp.png"
+    alt=""
+    srcset=""
+  />
+</div>
+
+<!-- awards -->
+<section>
+  <div class="w-full flex flex-col xl:flex-row justify-center items-center my-20">
+    <div class="flex justify-end">
+        <div class="w-64 h-fit px-5 text-center mx-0 md:mx-20 xl:mx-10 ">
+            <i class="bi bi-globe-americas text-5xl text-pink-500"></i>
+            <p class="text-xl font-bold mt-3">Works Worldwide</p>
+            <p class="text-sm mt-5 text-gray-700">No other free streaming service delivers more content to and from more countries worldwide.</p>
+        </div>
+        <div class="w-64 h-fit px-5 text-center mx-0 md:mx-20 xl:mx-10">
+            <i class="bi bi-newspaper text-5xl text-blue-400"></i>
+            <p class="text-xl font-bold mt-3">Thousands of Titles</p>
+            <p class="text-sm mt-5 text-gray-700">Choose from movies, shows, sports and music documentaries, AMC series, Live TV and more.</p>
+        </div>
+    </div>
+    <div class="flex">
+        <div class="w-64 h-fit px-5 text-center mx-0 md:mx-20 xl:mx-10 mt-10 xl:mt-0">
+            <i class="bi bi-piggy-bank text-6xl text-purple-600"></i>
+            <p class="text-xl font-bold mt-3">Always 100% Free</p>
+            <p class="text-sm mt-5 text-gray-700">Welcome to instant gratification at its best. Watch now without any payment or subscription and end the search for free movie websites.</p>
+        </div>
+        <div class="w-64 h-fit px-5 text-center mx-0 md:mx-20 xl:mx-10 mt-10 xl:mt-0">
+            <i class="bi bi-pc-display text-6xl text-yellow-400"></i>
+            <p class="text-xl font-bold mt-3">Device-Friendly</p>
+            <p class="text-sm mt-5 text-gray-700">Stream the good stuff from your favorite devices including Apple, Android, Smart TVs and more.</p>
+        </div>
+    </div>
+
+  </div>
+</section>
+<!-- awards -->
+
+<section>
+    <div class="w-full bg-gradient-to-r from-indigo-900 from-indigo-700 to-purple-400 flex my-20">
+        <div class="w-full lg:w-6/12 flex items-center p-20">
+            <div class="w-96">
+                <p class="text-4xl font-bold text-white">See what’s new on Pluto TV, Tubi, & more.</p>
+                <p class="my-10 text-gray-200">Select your favorite streaming services to discover more, search faster, and get curated recommendations all without ever leaving Plex. Connect with friends to see who’s watching what, where.</p>
+                <button type="button" class="text-white bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-4 focus:ring-yellow-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:focus:ring-yellow-900">Discover More</button>
+            </div>
+        </div>
+        <div class="w-6/12 p-10 hidden lg:block">
+            <img src="../../assets/images/watch-free-discover-image.png" alt="">
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="w-full flex my-20">
+        <div class="w-6/12 hidden lg:block p-36">
+            <img src="../../assets/images/Continue_Watching_v2-2-1440x1529.png">
+        </div>
+        <div class="w-full lg:w-6/12 flex items-center p-20">
+            <div class="">
+                <p class="text-4xl font-bold">It has never been easier to watch free movies online.</p>
+                <p class="my-10 text-gray-900">Once you register for a free account with Plex, we’ll keep your place from screen to screen as long as you’re signed in. No matter what device you choose, your free movies will pick up where you left off with ease.</p>
+                <button type="button" class="text-white bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-4 focus:ring-yellow-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:focus:ring-yellow-900">Discover More</button>
             </div>
         </div>
     </div>
-    <img class="w-full h-screen bg-cover object-cover" src="../../assets/images/global-home-bg-comp.png" alt="" srcset="">
-</div>
+</section>
+
+<section>
+    <div class="flex justify-center mb-20 w-full">
+        <div class="flex overflow-x-auto w-10/12">
+                <img src="../../assets/images/icon/icon00.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon0.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon1.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon2.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon3.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon4.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon5.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon6.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon7.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon8.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon9.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon10.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon11.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon13.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon14.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon15.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon16.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon17.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon18.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon19.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon20.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon21.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+                <img src="../../assets/images/icon/icon22.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
+        </div>
+    </div>
+</section>
 
 <!-- Cards -->
-<div class="m-6 flex flex-row justify-center gap-6">
-    <app-cards></app-cards>
-    <app-cards></app-cards>
-    <app-cards></app-cards>
+<!-- <div class="m-6 flex flex-row justify-center gap-6">
+  <app-cards></app-cards>
+  <app-cards></app-cards>
+  <app-cards></app-cards>
 </div>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
 <!-- Cards -->
-
