--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,7 +79,7 @@
 </section>
 
 <section>
-    <div class="w-full flex my-20">
+    <div class="w-full flex mt-20 mb-5">
         <div class="w-6/12 hidden lg:block p-36">
             <img src="../../assets/images/Continue_Watching_v2-2-1440x1529.png">
         </div>
@@ -94,7 +94,13 @@
 </section>
 
 <section>
-    <div class="flex justify-center mb-20 w-full">
+    <div class="w-full px-32 mb-20">
+        <hr class="h-1 bg-gray-300 border-0 rounded dark:bg-gray-700">
+    </div>
+    <div class="w-full text-center mb-16">
+        <p class="text-3xl font-bold text-gray-900">Our Main Services</p>
+    </div>
+    <div class="flex justify-center mb-12 w-full">
         <div class="flex overflow-x-auto w-10/12">
                 <img src="../../assets/images/icon/icon00.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
                 <img src="../../assets/images/icon/icon0.webp" class="rounded-lg w-14 min-w-12 ml-1"/>
@@ -123,11 +129,71 @@
     </div>
 </section>
 
-<!-- Cards -->
-<!-- <div class="m-6 flex flex-row justify-center gap-6">
-  <app-cards></app-cards>
-  <app-cards></app-cards>
-  <app-cards></app-cards>
+<section class="mb-32">
+    <div class="w-full flex justify-center mb-20">
+        <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+            More Info
+          </button>
+    </div>
+    <!-- Main modal -->
+<div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative p-4 w-full max-w-2xl max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                <h3 class="text-xl font-bold  dark:text-white">
+                    More Information
+                </h3>
+                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="default-modal">
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                    </svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <div class="p-4 md:p-5 space-y-4">
+                <p class="text-base leading-relaxed font-bold dark:text-gray-400">
+                    Where to watch movies online?
+                 </p>
+                <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+                    If you want to watch movies online then you need access to a streaming service that has a good library of content. If you want to find movies to watch in the Philippines then you can discover what Netflix, Amazon Prime Video, or Disney+ has to offer. With those streaming services, you can watch the best of the big Hollywood movies such as Avengers: Endgame, Knives Out, Star Wars, and Avatar. If you want to watch more movies from streaming services closer to home you can find a wide selection of movies on Hayu, Iflix/WeTV, and Viu. Discover where you can watch Filipino movies such as Hello, Love, Goodbye, The Hows of Us, and Maid in Malacanag using JustWatch.
+                    Filter by different genres in order to find exactly what you’re looking for. Discover action and adventure movies to keep you entertained or romantic dramas that never fail to surprise you. You can filter by age rating to discover movies that are family-friendly. Or pick a horror movie for jump scares and thrills. Whatever kind of movie you’re after, JustWatch helps you discover what to watch and where to stream it.
+                </p>
+            </div>
+            <div class="p-4 md:p-5 space-y-4">
+                <p class="text-base leading-relaxed font-bold dark:text-gray-400">
+                    Watch free movies
+                 </p>
+                <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+                    If you want to watch free movies online then you’re in the right place. iQiyi offers a selection of free content to watch if you’re located in the Philippines. Otherwise use JustWatch to discover free movies online. Filter by price to discover what free films are available right now. 
+                </p>
+            </div>
+            <!-- Modal footer -->
+            <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                
+            </div>
+        </div>
+    </div>
 </div>
-<app-footer></app-footer> -->
-<!-- Cards -->
+    
+</section>
+
+<section>
+    <div class="w-full flex mt-20 bg-slate-100">
+        <div class="w-full lg:w-6/12 flex items-center p-20">
+            <div class="w-96">
+                <p class="text-4xl font-bold">Upcoming Facilities</p>
+                <p class="my-10 text-gray-600">Stream Plex from just about any phone, tablet, smart TV, gaming consoles, or PC.</p>
+                <img src="../../assets/images/avod-device-icons-1.png" alt="">
+            </div>
+        </div>
+        <div class="w-6/12 p-10 hidden lg:block">
+            <img src="../../assets/images/image-avod-devices-all-may-2021-1440x872.png" alt="">
+        </div>
+    </div>  
+</section>
+
+<app-footer></app-footer>
+
