allfilms page slide bar structure created

--- a/src/app/all-films/all-films.component.html
+++ b/src/app/all-films/all-films.component.html
@@ -1,4 +1,13 @@
-<div>
-    <app-cards/>
-</div>
+
+<section>
+    <div class="w-3/12 h-screen bg-blue-500 duration-1000 -left-full fixed" id="SidBarMain"></div>
+    <div class="w-full flex justify-end fixed top-0">
+        <i class="bi bi-list text-4xl m-3 -right-14" id="menuIconBlock" (click)="sideMenuBlock()"></i>
+        <i class="bi bi-x text-4xl m-3 -right-14 hidden" id="menuIconHidden" (click)="sideMenuHidden()"></i>
+      </div> 
+      
+
+    <div class="w-full h-screen"></div>
+</section>
+
 
