--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 
 
-<nav class="bg-gray-800 border-gray-200 dark:bg-gray-900 md:w-full ">
+<nav class="bg-gray-800 border-gray-200 dark:bg-gray-900 md:w-full z-50">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
