card slider ng-content implemented

--- a/src/app/all-films/all-films.component.html
+++ b/src/app/all-films/all-films.component.html
@@ -33,7 +33,20 @@
         <!-- Card Slider -->
         <div class="w-full flex justify-center items-center" id="mainPanel">
             <div class="w-full mx-10 overflow-hidden">
-                <app-card-slider></app-card-slider>
+                <app-card-slider>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                    <app-cards/>
+                </app-card-slider>
             </div>
         </div>
         <!-- Card Slider -->
@@ -58,7 +71,7 @@
 
         </div>
 
-        <div class="w-full flex flex-wrap gap-3 justify-center mt-24">
+        <div class="w-full flex flex-wrap gap-3 justify-center mt-16">
             <app-cards Width="w-52" Height="300"/>
             <app-cards Width="w-52" Height="300"/>
             <app-cards Width="w-52" Height="300"/>
