--- a/src/app/component/card-slider/card-slider.component.html
+++ b/src/app/component/card-slider/card-slider.component.html
@@ -10,16 +10,7 @@
     </div>
     <div class="slider-container overflow-hidden w-full mx-auto px-5">
         <div class="slider flex transition-transform duration-500 ease-in-out gap-3">
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
-            <app-cards/>
+            <ng-content></ng-content>
         </div>
       </div>
 </div>
