--- a/src/app/component/cards/cards.component.html
+++ b/src/app/component/cards/cards.component.html
@@ -1,6 +1,6 @@
 <div class="{{Width}} overflow-hidden my-2 relative z-20">
     <a href="watch-film" class="w-full h-auto overflow-hidden block relative">
-      <div class="w-full opacity-0 hover:opacity-100 duration-300 absolute top-0 left-0" style='height: {{Height}}px;'>
+      <div class="w-full opacity-0 hover:opacity-100 duration-300 absolute top-0 left-0" [style.height.px]="Height">
         <!-- Opacity div -->
         <div class="inset-0 bg-black opacity-50 absolute"></div>
         <!-- Icon -->
